fix academic/tutorial bottom spacing

--- a/src/new-main.less
+++ b/src/new-main.less
@@ -727,7 +727,7 @@ html, body{
       margin-bottom: 20px;
       min-height: 430px;
        @media (max-width: @screen-md-max) {
-        min-height: 480px;
+        min-height: auto;
       }
     }
     &:nth-child(2)
